fix task collapse ui transformation bug

--- a/projectforge-webapp/src/components/base/dynamicLayout/components/select/task/TaskSelect.module.scss
+++ b/projectforge-webapp/src/components/base/dynamicLayout/components/select/task/TaskSelect.module.scss
@@ -38,6 +38,5 @@
 
 .taskCollapse {
   max-height: 600px;
-  min-height: 150px;
   overflow: scroll;
 }
